--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="app-root">
     </div>
-    <<script src="./index.js"></script>
+    <script src="./index.js"></script>
 
   </body>
 </html>
