--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <script src="https://kit.fontawesome.com/595acf0be0.js"></script>
+  <style>
+  body {
+    background-image:  url("assets/pictures/background.jpg");
+  }
+  </style>
+  <title>politigo</title>
 </head>
 
 <body>
