Linking and styling (#15)
* changes to package-lock.json

* Updated BillStyle.scss

added missing } bracket

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <script src="https://kit.fontawesome.com/595acf0be0.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Signika+Negative&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   crossorigin="anonymous"/>
@@ -14,8 +19,7 @@
 </head>
 
 <body>
-  <div id="app-root">
-  </div>
+  <div id="app-root"></div>
   <script src="./index.js"></script>
 </body>
 
